# lock-manager

./: .gitignore  AI-DECLARATION.md  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  rubber-duck.md
.hermes/plans/: 2026-06-17_101815-zigbee-lock-code-manager.md
custom_components/zigbee_lock_manager/: __init__.py  config_flow.py  const.py  diagnostics.py  frontend.py  manager.py  manifest.json  scheduler.py  sensor.py  services.yaml  storage.py  strings.json
custom_components/zigbee_lock_manager/frontend/: lock-manager-panel.js
tests/: __init__.py  conftest.py  test_config_flow.py  test_frontend.py  test_integration_lifecycle.py  test_scheduler.py  test_sensor_diagnostics.py  test_services.py  test_services_yaml.py  test_storage.py  test_validation.py
