[project]
name = "zigbee-lock-manager"
version = "0.1.0"
description = "Home Assistant custom integration for managing ZHA Zigbee lock user-code slots"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "User" }]
keywords = ["home-assistant", "zigbee", "zha", "lock", "hacs"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["custom_components", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["B904"]
